--- a/assets/style.css
+++ b/assets/style.css
@@ -53,9 +53,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-body {
 
-}
 section {
 	margin-block: 6em;
 }
@@ -132,6 +130,10 @@ header {
 #banner .arrow_right {
 	right: 10px;
 }
+#banner .arrow_left, #banner .arrow_right {
+	cursor: pointer
+}
+
 /* Gestion des points du carrousel */
 .dots {
 	position: absolute;
@@ -146,6 +148,10 @@ header {
 	border: 3px solid #fff;
 	border-radius: 100%;
 	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);;
+}
+
+.dot:hover{
+	cursor: pointer;
 }
 .dot_selected {
 	background-color: #fff;
