--- a/assets/style.css
+++ b/assets/style.css
@@ -150,9 +150,9 @@ header {
 	box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);;
 }
 
-.dot:hover{
+/* .dot:hover{
 	cursor: pointer;
-}
+} */
 .dot_selected {
 	background-color: #fff;
 }
